create versioning and install browsersync
Browser sync only works with local address not proxy :(

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,5 +2,7 @@
 @import 'base/type.scss';
 @import 'base/variables.scss';
 
+@import 'libs/bootstrap.min.scss';
+
 @import 'partials/header.scss';
 @import 'partials/footer.scss';
