add advance post features
Added new features such as edit, delete and also meta data for each post

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,6 +3,9 @@
 @import 'base/variables.scss';
 
 @import 'libs/bootstrap.min.scss';
+@import 'libs/selectize.min.scss';
+@import 'libs/default.scss';
+@import 'libs/default.date.scss';
 
 @import 'partials/header.scss';
 @import 'partials/footer.scss';
